added route for retrieving server version info; updated docs
